--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: false
 language: node_js
 node_js:
-  - stable # use nodejs v10 LTS
+  - "14.15.1" # use nodejs v10 LTS
 cache: npm
 branches:
   only:
