--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,43 @@
-sudo: false
-language: node_js
-node_js:
-  - "14.15.1" # use nodejs v10 LTS
-cache: npm
+# 指定构建环境是Node.js，当前版本是稳定版
+anguage: node_js
+node_js: "14.15.1"
+
+# 设置钩子只检测blog-source分支的push变动
 branches:
   only:
-    - blog-source # build master branch only
+    - blog-source
+
+# 设置缓存文件
+cache:
+  directories:
+    - node_modules
+
+#在构建之前安装hexo环境
+before_install:
+  - npm install -g hexo-cli
+
+#安装git插件和搜索功能插件
+install:
+  - npm install
+
+  # 设置git提交名，邮箱；替换真实token到_config.yml文件
+before_script:
+  - git config user.name "molitea"
+  - git config user.email "elvin.k@qq.com"
+  # 替换同目录下的_config.yml文件中github_token字符串为travis后台刚才配置的变量，注>意此处sed命令用了双引号。单引号无效！
+  - sed -i "s/github_token/${GH_TOKEN}/g" _config.yml || exit 1
+
+# 执行清缓存，生成网页操作
 script:
-  - hexo generate # generate static files
-deploy:
-  provider: pages
-  skip-cleanup: true
-  github-token: $GH_TOKEN
-  keep-history: true
-  on:
-    branch: blog-source
-  local-dir: public
+  - hexo clean
+  - hexo generate
+  - hexo deploy
+
+# configure notifications (email, IRC, campfire etc)
+# please update this section to your needs!
+# https://docs.travis-ci.com/user/notifications/
+notifications:
+  email:
+    - elvin.k@qq.com
+  on_success: change
+  on_failure: always
