--- a/_config.yml
+++ b/_config.yml
@@ -104,5 +104,5 @@ theme: next
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: https://github.com/molitea/molitea.github.io.git
+  repo: https://github_token@github.com/molitea/molitea.github.io.git
   branch: master
