--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ before_install:
 #安装git插件和搜索功能插件
 install:
   - npm install
+  - npm install hexo-excerpt --save
 
   # 设置git提交名，邮箱；替换真实token到_config.yml文件
 before_script:
