--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_install:
 install:
   - npm install
   - npm install hexo-excerpt --save
+  - npm install hexo-generator-searchdb --save
 
   # 设置git提交名，邮箱；替换真实token到_config.yml文件
 before_script:
