--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -243,7 +243,7 @@ read_more_btn: true
 post_meta:
   item_text: true
   created_at: true
-  updated_at: true
+  updated_at: false
     enable: true
     another_day: true
   categories: true
